--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "test": "./node_modules/.bin/jest test",
     "test:cover": "./node_modules/.bin/jest test --coverage",
-    "test:watch": "./node_modules/.bin/jest test --watch --notify"
+    "test:watch": "./node_modules/.bin/jest test --watch --notify",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "keywords": [
     "aws",
@@ -22,6 +23,7 @@
   "license": "MIT",
   "devDependencies": {
     "aws-sdk": "^2.22.0",
+    "coveralls": "^2.12.0",
     "jest": "^19.0.2"
   }
 }
