--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lawos",
   "version": "1.0.3",
-  "description": "Wrapper to process messages in SQS queue.",
+  "description": "Wrapper for Amazon SQS Worker with AWS Lambda",
   "main": "src/main.js",
   "homepage": "https://github.com/sbstjn/lawos",
   "repository": {
@@ -17,7 +17,8 @@
   "keywords": [
     "aws",
     "lambda",
-    "sqs"
+    "sqs",
+    "worker"
   ],
   "author": "Sebastian Müller <mail@sbstjn.com",
   "license": "MIT",
