--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
   "rules": {
     "no-mixed-operators": 0,
     "newline-per-chained-call": 0,
-    "arrow-parens": 0
+    "arrow-parens": 0,
+    "strict": 0
   }
 }
