--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
     "no-mixed-operators": 0,
     "newline-per-chained-call": 0,
     "arrow-parens": 0,
-    "strict": 0
+    "strict": 0,
+    "comma-dangle": 0
   }
 }
