--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "newline-per-chained-call": 0,
     "arrow-parens": 0,
     "strict": 0,
-    "comma-dangle": 0
+    "comma-dangle": 0,
+    "object-shorthand": 0
   }
 }
