Use `standard` instead of `eslint`

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:cover": "./node_modules/.bin/jest test --coverage",
     "test:watch": "./node_modules/.bin/jest test --watch --notify",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "lint": "./node_modules/.bin/eslint src"
+    "lint": "./node_modules/.bin/standard | ./node_modules/.bin/snazzy"
   },
   "keywords": [
     "aws",
@@ -26,11 +26,18 @@
   "devDependencies": {
     "aws-sdk": "^2.22.0",
     "coveralls": "^2.12.0",
-    "eslint": "^3.17.1",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
-    "jest": "^19.0.2"
+    "jest": "^19.0.2",
+    "snazzy": "^6.0.0",
+    "standard": "^9.0.2"
+  },
+  "standard": {
+    "envs": [
+      "node",
+      "jest"
+    ],
+    "ignore": [
+      "coverage",
+      "node_modules"
+    ]
   }
 }
