--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "standard": "^9.0.2"
   },
   "standard": {
+    "globals": [
+      "it",
+      "expect",
+      "jest"
+    ],
     "envs": [
       "node",
       "jest"
